incubator/spotweb/0.0.1/CONFIG.md
# spotweb

![Version: 0.0.1](https://img.shields.io/badge/Version-0.0.1-informational?style=flat-square) ![AppVersion: 20210328](https://img.shields.io/badge/AppVersion-20210328-informational?style=flat-square)

Spotweb is a decentralized usenet community based on the Spotnet protocol.

**Homepage:** <https://github.com/truecharts/apps/master/charts/incubator/spotweb>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| TrueCharts | info@truecharts.org | https://truecharts.org |

## Source Code

* <https://github.com/spotweb/spotweb>
* <https://hub.docker.com/r/jgeusebroek/spotweb>

## Requirements

Kubernetes: `>=1.16.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://truecharts.org | common | 8.9.10 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| env.SPOTWEB_DB_HOST | string | `"<database_server_hostname>"` |  |
| env.SPOTWEB_DB_NAME | string | `"spotweb"` |  |
| env.SPOTWEB_DB_PASS | string | `"spotweb"` |  |
| env.SPOTWEB_DB_PORT | string | `"<database_port>"` |  |
| env.SPOTWEB_DB_TYPE | string | `"pdo_mysql"` |  |
| env.SPOTWEB_DB_USER | string | `"spotweb"` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"jgeusebroek/spotweb"` |  |
| image.tag | string | `"20210328@sha256:e41482a844d8e5582239868d61ef8335dba156fa39d3f1c8ddc762ab214cf5b9"` |  |
| ingress.enabled | bool | `false` |  |
| persistence.config.enabled | bool | `true` |  |
| persistence.config.mountPath | string | `"/config"` |  |
| service.main.ports.main.port | int | `80` |  |
| service.main.ports.main.targetPort | int | `80` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.5.0](https://github.com/norwoodj/helm-docs/releases/v1.5.0)
