incubator/spotweb/0.0.6/CONFIG.md
# spotweb

![Version: 0.0.6](https://img.shields.io/badge/Version-0.0.6-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: 20210328](https://img.shields.io/badge/AppVersion-20210328-informational?style=flat-square)

Spotweb is a decentralized usenet community based on the Spotnet protocol.

**Homepage:** <https://github.com/truecharts/apps/master/charts/incubator/spotweb>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| TrueCharts | info@truecharts.org | https://truecharts.org |

## Source Code

* <https://github.com/spotweb/spotweb>
* <https://hub.docker.com/r/jgeusebroek/spotweb>

## Requirements

Kubernetes: `>=1.16.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://truecharts.org/ | postgresql | 6.0.27 |
| https://truecharts.org | common | 8.9.18 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| env | object | `{}` |  |
| envTpl.SPOTWEB_DB_NAME | string | `"{{ .Values.postgresql.postgresqlDatabase }}"` |  |
| envTpl.SPOTWEB_DB_PORT | string | `"5432"` |  |
| envTpl.SPOTWEB_DB_TYPE | string | `"pdo_pgsql"` |  |
| envTpl.SPOTWEB_DB_USER | string | `"{{ .Values.postgresql.postgresqlUsername }}"` |  |
| envValueFrom.SPOTWEB_DB_HOST.secretKeyRef.key | string | `"plainhost"` |  |
| envValueFrom.SPOTWEB_DB_HOST.secretKeyRef.name | string | `"dbcreds"` |  |
| envValueFrom.SPOTWEB_DB_PASS.secretKeyRef.key | string | `"postgresql-password"` |  |
| envValueFrom.SPOTWEB_DB_PASS.secretKeyRef.name | string | `"dbcreds"` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"jgeusebroek/spotweb"` |  |
| image.tag | string | `"20210328@sha256:e41482a844d8e5582239868d61ef8335dba156fa39d3f1c8ddc762ab214cf5b9"` |  |
| persistence.config.enabled | bool | `true` |  |
| persistence.config.mountPath | string | `"/config"` |  |
| persistence.varrun.enabled | bool | `true` |  |
| podSecurityContext.runAsGroup | int | `568` |  |
| podSecurityContext.runAsUser | int | `568` |  |
| postgresql.enabled | bool | `true` |  |
| postgresql.existingSecret | string | `"dbcreds"` |  |
| postgresql.postgresqlDatabase | string | `"spotweb"` |  |
| postgresql.postgresqlUsername | string | `"spotweb"` |  |
| securityContext.allowPrivilegeEscalation | bool | `false` |  |
| securityContext.readOnlyRootFilesystem | bool | `false` |  |
| securityContext.runAsNonRoot | bool | `false` |  |
| service.main.ports.main.port | int | `11000` |  |
| service.main.ports.main.targetPort | int | `80` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.5.0](https://github.com/norwoodj/helm-docs/releases/v1.5.0)
